// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AgentSearchForm it has a default heading 1`] = `
<DocumentFragment>
  <form
    class="PodBrowser-form"
  >
    <label
      class="PodBrowser-label"
    >
      WebID
    </label>
    <input
      class="PodBrowser-input"
      id="id2"
      pattern="https://.+"
      title="Must start with https://"
      type="url"
      value=""
    />
    <button
      class="PodBrowser-button"
      data-testid="add-agent-button"
      type="submit"
    >
      Add
    </button>
  </form>
</DocumentFragment>
`;

exports[`AgentSearchForm it renders an AgentSearchForm 1`] = `
<DocumentFragment>
  <form
    class="PodBrowser-form"
  >
    <label
      class="PodBrowser-label"
    >
      WebID
    </label>
    <input
      class="PodBrowser-input"
      id="id1"
      pattern="https://.+"
      title="Must start with https://"
      type="url"
      value=""
    />
    <button
      class="PodBrowser-button"
      data-testid="add-agent-button"
      type="submit"
    >
      Add
    </button>
  </form>
</DocumentFragment>
`;
